<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    android:background="@color/color_thongtintaikhoan_background"
    tools:context=".activity_taikhoan.ThongTinTaiKhoanActivity">

    <android.support.v7.widget.Toolbar
    app:title="@string/thongtintaikhoan"
    android:background="@color/color_thongtintaikhoan_toolbar"
    app:titleTextColor="@color/color_toolbar_name"
    android:id="@+id/toolbarThongTinTaiKhoan"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
    <TextView
        android:textStyle="bold"
        android:textColor="@color/color_sanpham_text"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="Tên người dùng"
        android:gravity="center_vertical"
        android:id="@+id/textViewTenTaiKhoan"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <TextView
        android:textStyle="bold"
        android:textColor="@color/color_sanpham_text"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="Mật khẩu"
        android:gravity="center_vertical"
        android:id="@+id/textViewMatKhau"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <TextView
        android:textStyle="bold"
        android:textColor="@color/color_sanpham_text"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="Họ tên"
        android:gravity="center_vertical"
        android:id="@+id/textViewHoTen"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <TextView
        android:textStyle="bold"
        android:textColor="@color/color_sanpham_text"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="Ngày sinh"
        android:gravity="center_vertical"
        android:id="@+id/textViewNgaySinh"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <TextView
        android:textStyle="bold"
        android:textColor="@color/color_sanpham_text"
        android:padding="8dp"
        android:inputType="phone"
        android:textSize="20sp"
        android:text="Số điện thoại"
        android:gravity="center_vertical"
        android:id="@+id/textViewSoDT"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <TextView
        android:textStyle="bold"
        android:textColor="@color/color_sanpham_text"
        android:padding="8dp"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:text="Email"
        android:gravity="center_vertical"
        android:id="@+id/textViewEmail"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <TextView
        android:textStyle="bold"
        android:textColor="@color/color_sanpham_text"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="Địa chỉ"
        android:gravity="center_vertical"
        android:id="@+id/textViewTinhTP"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <LinearLayout
        android:weightSum="2"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:textStyle="bold"
            android:text="@string/text_button_chinhsuataikhoan"
            android:id="@+id/buttonChinhSuaTaiKhoan"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/buttonThoatChinhSuaTaiKhoan"
            android:textStyle="bold"
            android:text="@string/text_button_thoat_xemtaikhoan"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>